remove race conditions